# pedeps

./: .gitignore  CMakeLists.txt
src/: copypedeps.cpp  listpedeps.c
